# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest_output.txt
.github/workflows/: deploy.yml
cubix_data_engineer_capstone/: __init__.py  upload_latest_whl.ps1
cubix_data_engineer_capstone/etl/: __init__.py
cubix_data_engineer_capstone/etl/bronze/: __init__.py  extract_and_load_file.py
cubix_data_engineer_capstone/etl/silver/: __init__.py  calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py
cubix_data_engineer_capstone/utils/: __init__.py  authentication.py  config.py  databricks.py  datalake.py
docs/: kurzus_1_projekt_letrehozas.md  kurzus_2_wheel_databricks.md  kurzus_3_kodminoseg.md  kurzus_4_teszteles.md
tests/: conftest.py
tests/etl/silver/: __init__.py  test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
