[project]
name = "cubix-data-engineer-capstone"
version = "0.3.2"
description = ""
authors = [
    {name = "Yxonyx", email="kaiserjonatan911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
delta = ["delta-spark>=3.3.0"]
dev = ["pyspark>=3.5.4", "numpy>=1"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyarrow = "^19.0.0"
pre-commit = "^4.0.1"
pandas = "^2.2.3"
ruff = "^0.14.10"

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = ["ignore:DeprecationWarning"]
addopts = "--disable-warnings -p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
